force-app/main/default/objects/Student__c/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <formula>ADDMONTHS(   Task_s_Due_Date__c ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due date</label>
    <type>Date</type>
</CustomField>