force-app/main/default/objects/Student__c/fields/Task_s_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_s_Due_Date__c</fullName>
    <label>Task&apos;s Due Date</label>
    <type>Date</type>
</CustomField>